demo/src/main/java/com/example/demo/errors/VeterinarioException.java
package com.example.demo.errors;

public class VeterinarioException extends RuntimeException {

    public VeterinarioException(Long id) {
        super("Veterinario no encontrado con id: " + id);
    }
}
